Fixed spacing on shopping cart - Would prefer for text boxes to be right justified...  Possibly add pricing...

--- a/style.css
+++ b/style.css
@@ -11,3 +11,7 @@ table {
 th, td{
   text-align: center;
 }
+
+#cart {
+  border-spacing: 30px 10px;
+}
